@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-04T12:16:54Z",
-  "count_outdated" : 3047,
-  "uniques_outdated" : 1022,
-  "count" : 3052,
-  "uniques" : 1027,
+  "timestamp" : "2025-08-07T12:17:26Z",
+  "count_outdated" : 3048,
+  "uniques_outdated" : 1023,
+  "count" : 3054,
+  "uniques" : 1028,
   "views" : [
-    {
-      "timestamp": "2025-07-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-27T00:00:00Z",
       "count": 1,
@@ -46,6 +37,15 @@
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
