@@ -1,12 +1,7 @@
 {
-  "count": 5,
+  "count": 6,
   "uniques": 5,
   "views": [
-    {
-      "timestamp": "2025-07-24T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-07-27T00:00:00Z",
       "count": 1,
@@ -25,6 +20,11 @@
     {
       "timestamp": "2025-08-04T00:00:00Z",
       "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-07T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
